--- a/src/components/SettingsPopUp/SettingsPopUp.module.scss
+++ b/src/components/SettingsPopUp/SettingsPopUp.module.scss
@@ -1,8 +1,6 @@
 // Settings Pop Up content
 .settings_popup_container {
-
     position: absolute;
-    //display: flex;
     top: 10%;
     left: 33.75%;
     width: 32.5%;
@@ -11,8 +9,9 @@
     background-color: var(--settings-popup-bg-color);
     z-index: 4;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     box-shadow: 0 0 10px 1000px var(--settings-popup-box-shadow-color);
     border-radius: .5rem;
 
@@ -20,7 +19,7 @@
         color: var(--tile-text-color);
         text-transform: uppercase;
         text-align: center;
-        padding: .8rem;
+        //padding: .8rem;
         font-weight: bold;
         letter-spacing: .075rem;
     }
@@ -57,9 +56,24 @@
                 }
             }
 
+            // TODO: change according to toggler style
             .singular_setting_toggler {
-                
+                background-color: blueviolet;
+                display: flex;
+                align-items: center;
             }
+        }
+    }
+
+    .settings_popup_reset_button_container {
+        button {
+            padding: .5rem 1rem;
+            border-radius: .25rem;
+            background-color: var(--tile-present-color);
+            color: var(--settings-popup-bg-color);
+            font-size: .9rem;
+            font-weight: bold;
+            cursor: pointer;
         }
     }
 
@@ -74,6 +88,7 @@
         cursor: pointer;
     }
 
+    // ::after element to prevent user from clicking outside the settings box
     &::after {
         position: fixed;
         content: '';
