--- a/src/components/SettingsPopUp/SettingsPopUp.module.scss
+++ b/src/components/SettingsPopUp/SettingsPopUp.module.scss
@@ -1,25 +1,35 @@
 // Settings Pop Up content
 .settings_popup_container {
     position: absolute;
-    top: 10%;
+    top: 19.3%;
     left: 33.75%;
     width: 32.5%;
-    height: 75%;
+    height: 61.5%;
     border: 1px solid var(--settings-popup-border-color);
     background-color: var(--settings-popup-bg-color);
-    z-index: 4;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
     box-shadow: 0 0 10px 1000px var(--settings-popup-box-shadow-color);
     border-radius: .5rem;
+    
+    @keyframes slideIn {
+        0% {
+            translate: 0 7.5%;
+            opacity: 0;
+        }   
+        100% {
+            translate: 0 0;
+            opacity: 1;
+        }
+    }
+    animation: slideIn .2s ease 0s;
 
     .settings_popup_title {
         color: var(--tile-text-color);
         text-transform: uppercase;
         text-align: center;
-        //padding: .8rem;
         font-weight: bold;
         letter-spacing: .075rem;
     }
@@ -66,6 +76,7 @@
     }
 
     .settings_popup_reset_button_container {
+
         button {
             padding: .5rem 1rem;
             border-radius: .25rem;
@@ -88,18 +99,36 @@
         cursor: pointer;
     }
 
-    // ::after element to prevent user from clicking outside the settings box
-    &::after {
-        position: fixed;
-        content: '';
-        top: 0%;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-    }
-
     &.settings_popup_container_hide { 
-        display: none;
+        
+        @keyframes slideOut {
+            0% {
+                translate: 0 0;
+                opacity: 1;
+            }   
+            100% {
+                translate: 0 7.5%;
+                opacity: 0;
+            }
+        }
+        animation: slideOut .2s ease 0s;
+        animation-fill-mode: forwards;
     }
+}
+
+
+// Wrapper element to prevent user from clicking outside the settings box
+.settings_pop_up_wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    z-index: 4;
+}
+
+
+.settings_pop_up_hidden {
+    display: none;
 }
