--- a/src/components/SettingsPopUp/SettingsPopUp.module.scss
+++ b/src/components/SettingsPopUp/SettingsPopUp.module.scss
@@ -71,6 +71,22 @@
                 background-color: blueviolet;
                 display: flex;
                 align-items: center;
+
+                // TODO: recheck if this is 100% corret
+                &.singular_setting_toggler_disabled {
+                    opacity: .5;
+                    position: relative;
+
+                    &::before {
+                        content: 'unavailable';
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        z-index: 1;
+                        background-color: rgab(0, 0, 0, .5);
+                    }
+                }
             }
         }
     }
