--- a/src/components/SettingsPopUp/SettingsPopUp.module.scss
+++ b/src/components/SettingsPopUp/SettingsPopUp.module.scss
@@ -72,19 +72,18 @@
                 display: flex;
                 align-items: center;
 
-                // TODO: recheck if this is 100% corret
+                // TODO: recheck if this is 100% correct (make opacity and not being able to click only on the buttons maybe?)
                 &.singular_setting_toggler_disabled {
-                    opacity: .5;
+                    opacity: .35;
                     position: relative;
 
                     &::before {
-                        content: 'unavailable';
+                        content: '';
+                        position: absolute;
                         top: 0;
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        z-index: 1;
-                        background-color: rgab(0, 0, 0, .5);
                     }
                 }
             }
