Add border highlight style to tiles
- Remove unnecessary code
- Fix animation logic for tiles tick animation
- Add border highlight to tiles that have a letter

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@ body {
     --tile-present-color: #b59f3b;
     --tile-wrong-color: #3a3a3c;
     --tile-border-color: #363636;
+    --tile-hightlighted-border-color: #565758;
     --tile-text-color: #ffffff;
     --keyboard-letter-tile-bg-color: #818384;
     --keyboard-letter-highlight-color: #5c8d78;
