Create stats and help pop up components
- Create stats component and styles
- Create help component and styles
- Update state variable that controls pop ups to an objects (controlling all 3 pop ups of the app)
- Add Lazy mode (skips dictionary checkings of guessed words)
- Create state variable to hold player statistics and logic to update these statistics at the end of games
- Make tile width and height dynamic based on the number of stages and word length
- Add logic to make stats section pop up after game is over
- Remove unnecessary code

--- a/src/components/Line/Line.module.scss
+++ b/src/components/Line/Line.module.scss
@@ -114,7 +114,7 @@
                     background-color: var(--tile-correct-color);
                 }
             }
-            animation: flipBoardTile 1s ease-in-out, turnToGreen 1.25s ease-in-out;
+            animation: flipBoardTile .6s ease-in-out, turnToGreen .85s ease-in-out;
             animation-fill-mode: forwards;
         }
 
@@ -136,7 +136,7 @@
                     background-color: var(--tile-present-color);
                 }
             }
-            animation: flipBoardTile 1s ease-in-out, turnToYellow 1.25s ease-in-out;
+            animation: flipBoardTile .6s ease-in-out, turnToYellow .85s ease-in-out;
             animation-fill-mode: forwards;
         }
 
@@ -158,7 +158,7 @@
                     background-color: var(--tile-wrong-color);
                 }
             }
-            animation: flipBoardTile 1s ease-in-out, turnToGrey 1.25s ease-in-out;
+            animation: flipBoardTile .6s ease-in-out, turnToGrey .85s ease-in-out;
             animation-fill-mode: forwards;
         }
     }
