--- a/src/components/Line/Line.module.scss
+++ b/src/components/Line/Line.module.scss
@@ -14,11 +14,7 @@
         border: .1rem solid var(--tile-border-color);
         font-weight: bold;
         transition: all .05s ease-in-out;
-
-        .letter {
-            z-index: 3;
-            color: var(--tile-text-color);
-        }
+        color: var(--keyboard-letter-text-color);
 
         &.border_highlight {
             border: .1rem solid var(--tile-hightlighted-border-color);
@@ -93,6 +89,7 @@
             100% {
                 rotate: x 0deg;
                 border: none;
+                color: var(--tile-text-color);
             }
         }
 
