--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,5 +1,5 @@
 .navbar_container {
-    color: white;
+    color: var(--header-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
