--- a/src/components/SettingsPopUp/SettingsPopUp.module.scss
+++ b/src/components/SettingsPopUp/SettingsPopUp.module.scss
@@ -4,7 +4,7 @@
     top: 19.3%;
     left: 33.75%;
     width: 32.5%;
-    height: 61.5%;
+    height: 70%;
     border: 1px solid var(--popup-border-color);
     background-color: var(--popup-bg-color);
     display: flex;
@@ -74,7 +74,42 @@
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
+                gap: .5rem;
+                font-size: 1.3rem;
 
+                .singular_setting_toggler_decrement {
+                    background-color: inherit;
+                    color: var(--keyboard-letter-checked-color);
+                    //border: .05rem solid var(--tile-hightlighted-border-color);
+                    border: none;
+                    border-radius: .25rem;
+                    background-color: var(--tile-hightlighted-border-color);
+                    width: 1.15rem;
+                    height: 1.15rem;
+                    font-size: 1.1rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    align-self: flex-start;
+                    cursor: pointer;
+                }
+
+                .singular_setting_toggler_increment {
+                    background-color: inherit;
+                    color: var(--keyboard-letter-checked-color);
+                    //border: .05rem solid var(--tile-hightlighted-border-color);
+                    border: none;
+                    border-radius: .25rem;
+                    background-color: var(--tile-hightlighted-border-color);
+                    width: 1.15rem;
+                    height: 1.15rem;
+                    font-size: 1.1rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    align-self: flex-end;
+                    cursor: pointer;
+                }
 
                 .singular_setting_toggler_area {
                     width: 2rem;
