--- a/src/components/HelpPopUp/HelpPopUp.module.scss
+++ b/src/components/HelpPopUp/HelpPopUp.module.scss
@@ -5,14 +5,16 @@
     left: 33.75%;
     width: 32.5%;
     height: 61.5%;
-    border: 1px solid var(--settings-popup-border-color);
-    background-color: var(--settings-popup-bg-color);
+    //height: fit-content;
+    border: 1px solid var(--popup-border-color);
+    background-color: var(--popup-bg-color);
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     justify-content: space-evenly;
-    box-shadow: 0 0 10px 1000px var(--settings-popup-box-shadow-color);
+    box-shadow: 0 0 10px 1000px var(--popup-box-shadow-color);
     border-radius: .5rem;
+    padding: 2rem;
     
     @keyframes slideIn {
         0% {
@@ -27,79 +29,172 @@
     animation: slideIn .2s ease 0s;
 
     .help_popup_title {
-        color: var(--tile-text-color);
+        color: var(--keyboard-letter-text-color);
         text-transform: uppercase;
-        text-align: center;
-        font-weight: bold;
-        letter-spacing: .075rem;
+        margin: 0;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        font-family: 'Volkhov', serif;
+        letter-spacing: -.05rem;
+        word-spacing: .05rem;
     }
 
-    .help_popup_settings {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        padding: 0 1rem;
-        color: var(--tile-text-color);
+    .help_popup_subtitle {
+        color: var(--keyboard-letter-text-color);
+        margin: 0;
+        font-size: 1rem;
+        font-weight: lighter;
+    }
 
-        .singular_setting_container {
-            width: 100%;
-            display: flex;  
-            align-items: center;
-            justify-content: space-between; 
-            border-bottom: 1px solid var(--tile-wrong-color);
+    .help_popup_description_list {
+        color: var(--keyboard-letter-text-color);
+        padding: 0;
+        margin: 0;
+        padding-left: 1rem;
 
-            .singular_setting_text {
-
-                padding: 1rem 0;
-                h4 {
-                    margin: 0;
-                    font-weight: lighter;
-                    font-size: 1.13rem;
-                }
-
-                p {
-                    margin: 0;
-                    font-size: .75rem;
-                    color: var(--settings-text-description-color);
-                }
-            }
-
-            // TODO: change according to toggler style
-            .singular_setting_toggler {
-                background-color: blueviolet;
-                display: flex;
-                align-items: center;
-
-                // TODO: recheck if this is 100% correct (make opacity and not being able to click only on the buttons maybe?)
-                &.singular_setting_toggler_disabled {
-                    opacity: .35;
-                    position: relative;
-
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                    }
-                }
-            }
+        li {
+            font-size: 1rem;
+            line-height: 1.5rem;
+            font-weight: 500;
         }
     }
 
-    .settings_popup_reset_button_container {
+    .help_popup_examples_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-        button {
-            padding: .5rem 1rem;
-            border-radius: .25rem;
-            background-color: var(--tile-present-color);
-            color: var(--settings-popup-bg-color);
-            font-size: .9rem;
-            font-weight: bold;
-            cursor: pointer;
+        h6 {
+            font-size: 1rem;
+            color: var(--keyboard-letter-text-color);
+            margin: 0;
+        }
+
+        .help_popup_example_item {
+            display: flex;
+            flex-direction: column;
+
+            .help_popup_example_tiles {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: .35rem;
+
+                .popup_example_tile {
+                    background-color: var(--app-bg-color);
+                    width: 2rem;
+                    height: 2rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    text-transform: uppercase;
+                    font-size: 1.6rem;
+                    border: .1rem solid var(--tile-border-color);
+                    font-weight: bold;
+                    transition: all .05s ease-in-out;
+                    color: var(--keyboard-letter-text-color);
+
+                    @keyframes flipHelpTile {
+                        0% {
+                            rotate: x 0deg;
+                        }
+            
+                        47.5% {
+                            rotate: x 90deg;
+                        }
+            
+                        52.5% {
+                            rotate: x 90deg;
+                        }
+            
+                        100% {
+                            rotate: x 0deg;
+                            border: none;
+                            color: var(--tile-text-color);
+                        }
+                    }
+            
+                    &.popup_example_tile_green {
+                        @keyframes turnHelpTileToGreen {
+                            0% {
+                                background-color: var(--app-bg-color);
+                            }
+            
+                            25% {
+                                background-color: var(--app-bg-color);
+                            }
+            
+                            50% {
+                                background-color: var(--tile-correct-color);
+                            }
+            
+                            100% {
+                                background-color: var(--tile-correct-color);
+                            }
+                        }
+                        animation: flipHelpTile .6s ease-in-out, turnHelpTileToGreen .85s ease-in-out;
+                        animation-fill-mode: forwards;
+                    }
+            
+                    &.popup_example_tile_yellow {
+                        @keyframes turnHelpTileToYellow {
+                            0% {
+                                background-color: var(--app-bg-color);
+                            }
+            
+                            25% {
+                                background-color: var(--app-bg-color);
+                            }
+            
+                            50% {
+                                background-color: var(--tile-present-color);
+                            }
+            
+                            100% {
+                                background-color: var(--tile-present-color);
+                            }
+                        }
+                        animation: flipHelpTile .6s ease-in-out, turnHelpTileToYellow .85s ease-in-out;
+                        animation-fill-mode: forwards;
+                    }
+            
+                    &.popup_example_tile_grey {
+                        @keyframes turnHelpTileToGrey {
+                            0% {
+                                background-color: var(--app-bg-color);
+                            }
+            
+                            25% {
+                                background-color: var(--app-bg-color);
+                            }
+            
+                            50% {
+                                background-color: var(--tile-wrong-color);
+                            }
+            
+                            100% {
+                                background-color: var(--tile-wrong-color);
+                            }
+                        }
+                        animation: flipHelpTile .6s ease-in-out, turnHelpTileToGrey .85s ease-in-out;
+                        animation-fill-mode: forwards;
+                    }
+
+                    .popup_example_letter {
+                        margin: 0;
+                    }
+                }
+            }
+
+            p {
+                span {
+                    font-size: 1.05rem;
+                    font-weight: bold;
+                }
+
+                margin: 0;
+                color: var(--keyboard-letter-text-color);
+            }
         }
     }
 
