--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,12 @@ body {
     --popup-border-color: #f6f7f8;
     --popup-box-shadow-color: rgba(0, 0, 0, .375);
     --popup-text-description-color: #787c7e;
+    --extra-menu-box-shadow-color: rgba(0, 0, 0, .15);
+    --extra-menu-border-color: #dcdcdc;
+    --extra-menu-clickable-hover-color: #2f2f31;
+    --notification-bg-color: #ffffff;
+    --notification-color: #000000;
+    --notification-box-shadow-color: #000000;
 
     --footer-bg-color: rgb(27, 27, 27);
 }
@@ -59,6 +65,12 @@ body {
     --popup-border-color: #1a1a1b;
     --popup-box-shadow-color: rgba(0, 0, 0, .5);
     --popup-text-description-color: #818384;
+    --extra-menu-box-shadow-color: rgba(0, 0, 0, .15);
+    --extra-menu-border-color: #dcdcdc;
+    --extra-menu-clickable-hover-color: #2f2f31;
+    --notification-bg-color: #ffffff;
+    --notification-color: #000000;
+    --notification-box-shadow-color: #000000;
 
     --footer-bg-color: rgb(27, 27, 27);
 }
@@ -128,11 +140,14 @@ body {
 
     .notification_container {
         position: absolute;
-        top: 10%;
+        top: -1.5%;
         left: 50%;
+        translate: -50% 0;
         padding: 1rem;
-        background-color: var(--tile-text-color);
-        color: var(--app-bg-color);
+        background-color: var(--notification-bg-color);
+        color: var(--notification-color);
+        box-shadow: 0 0 .5rem var(--notification-box-shadow-color);
+        border-radius: .25rem;
         width: fit-content;
         z-index: 4;
 
