--- a/src/components/HelpPopUp/HelpPopUp.module.scss
+++ b/src/components/HelpPopUp/HelpPopUp.module.scss
@@ -4,7 +4,7 @@
     top: 19.3%;
     left: 33.75%;
     width: 32.5%;
-    height: 61.5%;
+    height: 66%;
     //height: fit-content;
     border: 1px solid var(--popup-border-color);
     background-color: var(--popup-bg-color);
@@ -30,7 +30,7 @@
 
     .help_popup_title {
         color: var(--keyboard-letter-text-color);
-        text-transform: uppercase;
+        text-transform: capitalize;
         margin: 0;
         font-size: 1.5rem;
         font-weight: bolder;
@@ -48,37 +48,42 @@
 
     .help_popup_description_list {
         color: var(--keyboard-letter-text-color);
-        padding: 0;
         margin: 0;
-        padding-left: 1rem;
+        padding: 1rem 0 1rem 1rem;
 
         li {
-            font-size: 1rem;
+            font-size: .9rem;
             line-height: 1.5rem;
-            font-weight: 500;
+            font-weight: 200;
         }
     }
 
     .help_popup_examples_container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
+        gap: .5rem;
 
         h6 {
             font-size: 1rem;
             color: var(--keyboard-letter-text-color);
             margin: 0;
+            font-weight: bold;
         }
 
         .help_popup_example_item {
             display: flex;
             flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: .5rem;
+            padding-bottom: .75rem;
 
             .help_popup_example_tiles {
                 display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: .35rem;
+                align-items: flex-start;
+                justify-content: flex-start;
+                gap: .25rem;
 
                 .popup_example_tile {
                     background-color: var(--app-bg-color);
@@ -89,7 +94,7 @@
                     justify-content: center;
                     text-transform: uppercase;
                     font-size: 1.6rem;
-                    border: .1rem solid var(--tile-border-color);
+                    border: .1rem solid var(--tile-hightlighted-border-color);
                     font-weight: bold;
                     transition: all .05s ease-in-out;
                     color: var(--keyboard-letter-text-color);
@@ -170,10 +175,12 @@
             
                             50% {
                                 background-color: var(--tile-wrong-color);
+                                color: var(--keyboard-letter-checked-color);
                             }
             
                             100% {
                                 background-color: var(--tile-wrong-color);
+                                color: var(--keyboard-letter-checked-color);
                             }
                         }
                         animation: flipHelpTile .6s ease-in-out, turnHelpTileToGrey .85s ease-in-out;
@@ -186,7 +193,7 @@
                 }
             }
 
-            p {
+            &>p {
                 span {
                     font-size: 1.05rem;
                     font-weight: bold;
@@ -204,7 +211,7 @@
         right: 3%;
         font-size: 1.3rem;
         background-color: var(--settings-popup-bg-color);
-        color: var(--tile-text-color);
+        color: var(--keyboard-letter-text-color);
         border: none;
         cursor: pointer;
     }
