--- a/src/components/Line/Line.module.scss
+++ b/src/components/Line/Line.module.scss
@@ -24,6 +24,26 @@
             border: .1rem solid var(--tile-hightlighted-border-color);
         }
 
+        &.correct_animation {
+
+            @keyframes translateBoardTile {
+                0% {
+                    translate: 0 0;
+                }
+
+                50% {
+                    translate: 0 -10%;
+                }
+
+                100% {
+                    translate: 0 0;
+                }
+            }
+
+            animation: translateBoardTile .3s ease-in-out;
+            //animation-fill-mode: forwards;
+        }
+
         &.tick {
             @keyframes tick {
                 0% {
@@ -115,7 +135,9 @@
                     background-color: var(--tile-correct-color);
                 }
             }
-            animation: flipBoardTile .6s ease-in-out, turnToGreen .85s ease-in-out;
+
+            animation: flipBoardTile .6s ease-in-out,
+            turnToGreen .85s ease-in-out;
             animation-fill-mode: forwards;
         }
 
@@ -137,7 +159,9 @@
                     background-color: var(--tile-present-color);
                 }
             }
-            animation: flipBoardTile .6s ease-in-out, turnToYellow .85s ease-in-out;
+
+            animation: flipBoardTile .6s ease-in-out,
+            turnToYellow .85s ease-in-out;
             animation-fill-mode: forwards;
         }
 
@@ -159,7 +183,9 @@
                     background-color: var(--tile-wrong-color);
                 }
             }
-            animation: flipBoardTile .6s ease-in-out, turnToGrey .85s ease-in-out;
+
+            animation: flipBoardTile .6s ease-in-out,
+            turnToGrey .85s ease-in-out;
             animation-fill-mode: forwards;
         }
     }
