Improve game tiles animations
- Remove unnecessary code
- Add new class to tile component for special animation upon game win
- Refactor initialization of lineClassNames state variable so that it removes the special game win class on component mount, and so that it adds "faster_animation" class is game is already finished
- Refactor API related code to attempt to handle errors and set state variable accordingly
- Add timeout duration before showing game win and game loss notifications (to wait for all tiles to flip)
- Improve timeout duration before showing StatsPopup component after game win and game loss

--- a/src/App.scss
+++ b/src/App.scss
@@ -95,14 +95,7 @@ body {
 }
 
 
-.main_container_loading {
-    i {
-        font-size: 5rem;
-        color: var(--tile-text-color);
-    }
-}
-
-
+// Main content
 .main_container {
     position: relative;
     width: 100%;
@@ -128,13 +121,6 @@ body {
             align-items: center;
             gap: .5rem;
         }
-    }
-
-    .api_warnings {
-        position: absolute;
-        top: 30%;
-        left: 20%;
-        color: var(--tile-text-color);
     }
 
 
@@ -177,5 +163,13 @@ body {
         &.notification_container_invisible {
             display: none;
         }
+    }
+}
+
+
+.main_container_loading {
+    i {
+        font-size: 5rem;
+        color: var(--tile-text-color);
     }
 }
